# zero2prod

./: Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
.github/workflows/: general.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
