[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.21"
tokio = {version="1.15.0", features = ["macros", "rt-multi-thread"]}
serde = {version = "1.0.135", features=["derive"]}
config = "0.11.0"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.19"
tracing = { version = "0.1.29", features = ["log"] }
tracing-subscriber = { version = "0.3.6", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.2"
tracing-actix-web = "0.5.0-beta.11"
secrecy = { version = "0.8", features = ["serde"] }

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.7.2"
